[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autoevolve"
version = "0.1.3"
description = "Let any AI agent autonomously evolve through experimentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "agent", "evolution", "autonomous", "experimentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
autoevolve = "autoevolve:cli_main"
